<resources>
    <string name="app_name">TARA</string>
    <string name="title_activity_traffic">TARA</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="pancamera">PanCamera</string>
    <string name="toggle_style">Toggle Style</string>
    <string name="directions_input">Directions Input</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="load_directions">Load directions</string>
    <string name="tooltip">This is the tooltip</string>
    <string name="start_animation">Start Animation</string>
    <string name="stop_animation">Stop Animation</string>
    <string name="clear_markers">Clear markers</string>
    <string name="add_default_locations">Add Default Locations</string>
    <string name="Name">Your first destination name</string>
    <string name="Places">Places</string>
    <string name="Directions">Directions</string>
    <string name="Route">Route</string>
    <string name="Reset">Reset</string>
    <string name="Traffic">Traffic</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="got_it">GOT IT</string>
    <string name="slide_1_title">Hello World!</string>
    <string name="slide_1_desc">Travel more, plan less</string>
    <string name="slide_2_title">Destination Packages</string>
    <string name="slide_2_desc">Grab destination packages for your family and friends!</string>
    <string name="slide_3_title">Free Mode</string>
    <string name="slide_3_desc">We provide itinerary creator that allows you to build your own itinerary!</string>
    <string name="slide_4_title">User Needs</string>
    <string name="slide_4_desc">The easiest way to know nearby restaurants, transportation and more!</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello!</string>
    <string name="no_notifications_set">This is TARA Alarm clock. This is where you store your Schedules.</string>
    <string name="enter_destination">Please enter your destination here...</string>
    <string name="pick_a_time">Tap on the button below to pick a time for the notification to be sent</string>
    <string name="time_picked">Time picked:</string>
    <string name="reminder">Remind yourself, you might forget something</string>
    <string name="reminder_explanation">The text you enter below will be shown as the notification title. Leave blank
    for default title.</string>
    <string name="destination">Destination:</string>
    <string name="notification_set">Notification set!</string>
    <string name="notification_modified">Notification modified!</string>
    <string name="notification_deleted">Notification deleted!</string>
    <string name="attribution">Weather data by OpenWeatherMap.org</string>
    <string name="error_fetch_weather">Could not fetch weather data</string>
    <string name="error_location_unavailable">Could not get current location</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="monday">Monday</string>
    <string name="sky_is_clear">sky is clear</string>
    <string name="nineteen_degrees">19°</string>
    <string name="fifteen_degrees">15°</string>
    <string name="asd"><u>Select Destination Package</u></string>
    <string name="asd2"><u>Select Itinerary Creator</u></string>
    <string name="_"></string>
    <string name="p1">Package 1</string>
    <string name="p1_desc">TARA offers package 1, which consists of different tourist attractions. From nature wonders to interesting historic sites, museums and once-in-a-lifetime experiences. Check out the following tourist attractions in Quezon City, Philippines.</string>
    <string name="artin">Art in Island</string>
    <string name="desc_artin">Art in Island allows visitors to interact and have fun with the art pieces. You can take as much pictures and videos as you want!. Here in Art in Island we want you to BE PART OF ART!</string>
    <string name="santodomingo">Santo Domingo</string>
    <string name="qch">Quezon City Heritage</string>
    <string name="desc_heritage">This large circular park is good place to go for a morning walk or jog or simple for stroll. It also has a museum at the center dedicated to the city founder, Manuel L. Quezon.</string>
    <string name="qmx">Quezon City Experience</string>
    <string name="desc_qmx">QCX is an interactive and socio-cultural green building compliant city museum which was inaguarated in Quezon Memorial Circle.</string>
    <string name="cof">Circle of Fun</string>
    <string name="desc_cof">Circle of Fun is a kids theme park, it has lots of rides and other attractions available for kids to enjoy. People typically spend up to 2 hours here.</string>
    <string name="amoranto">Amoranto Sports Complex</string>
    <string name="desc_amoranto">The stadium was built in honor of former mayor of Quezon City, Norberto S. Amoranto. It has a track and field oval, a volleyball court, a tennis court, and a swimming pool.</string>
    <string name="duration1">Approximate Duration : \n10 Hrs/day (From 10 AM - 8 PM). \nApproximate Cost \nPhp 3500 - 5500 ,good for 4 - 6 person \nReminder : Approximation might vary depends on user\'s preference \n</string>
    <string name="duration11">Approximate Duration : \n12 Hours (From 8 AM - 8 PM). \nApproximate Cost \nPhp 3500 - 5500 ,good for 4 - 6 person. \n</string>
    <string name="duration2">Approximate Duration : \n12 Hours(From 7 AM - 6 PM). \nApproximate Cost \nPhp 2600 - 6200 ,good for 2 - 5 person \n</string>
    <string name="duration3">Approximate Duration : \n12 Hours (From 8 AM - 8 PM). \nApproximate Cost \nPhp 4500 - 6500 ,good for 4 persons \n</string>
    <string name="duration4">Approximate Duration : \n12 Hours (From 8 AM - 7 PM). \nApproximate Cost \nPhp 3500 - 5500 ,good for 2 - 4 persons \n</string>
    <string name="duration5">Approximate Duration : \n12 Hours (From 8 AM - 8 PM). \nApproximate Cost \nPhp 1500 - 3500 ,good for 2-3 person \n</string>
    <string name="p2">Package 2</string>
    <string name="p2_desc">TARA offers package 2, which consists of different tourist attractions. From nature wonders to interesting historic sites, museums and once-in-a-lifetime experiences. Check out the following tourist attractions in Quezon City, Philippines.</string>
    <string name="balara">Balara Filter Park</string>
    <string name="desc_balara">Balara Filter park is one of the oldest of Quezon City park. It has swimming pools, a picnic grove, a windmill park, and art deco buildings.</string>
    <string name="uptown">UP Town Center</string>
    <string name="desc_uptown">UPTC is a shopping center in Quezon City, Metro Manila and managed by the Ayala Mall Group.</string>
    <string name="stamaria">Sta Maria Dela Strada</string>
    <string name="desc_stamaria">Sta. Maria Dela Strada Parish is a Wedding Church located in Katipunan Ave.</string>
    <string name="ateneo">Ateneo Art Gallery</string>
    <string name="desc_ateneo">The Ateneo Art Gallery is widely recognized today as the first museum of Philippines modern art, showcases works by postwar Filipino artists.</string>
    <string name="p3">Package 3</string>
    <string name="p3_desc">TARA offers package 3, which consists of different tourist attractions. From nature wonders to interesting historic sites, museums and once-in-a-lifetime experiences. Check out the following tourist attractions in Quezon City, Philippines.</string>
    <string name="edsa">Edsa Shrine</string>
    <string name="desc_edsa">It is a perfectly located along the way giving chances to people to at lease pay visit in the church.</string>
    <string name="maginhwa">Maginhawa Food Park</string>
    <string name="desc_maginhwa">The latest food community to hit Quezon City, it features 12 new food concepts housed and backyard picnic style dining.</string>
    <string name="church">Church Gesu</string>
    <string name="desc_church">The Church of Gesu is the Roman Catholic church of the Ateneo de Manila University campus in Quezon City in the Philippines.</string>
    <string name="up">UP</string>
    <string name="desc_up">The Philippines premier institution of higher learning. Links to all autonomous units and system-wide updates.</string>
    <string name="east">Eastwood City</string>
    <string name="desc_east">Your 24/7 destination for shopping dining and entertainment.</string>
    <string name="p4">Package 4</string>
    <string name="p4_desc">TARA offers package 4, which consists of different tourist attractions. From nature wonders to interesting historic sites, museums and once-in-a-lifetime experiences. Check out the following tourist attractions in Quezon City, Philippines.</string>
    <string name="bayani">Bantayog ng mga Bayani</string>
    <string name="desc_bayani">A memorial dedicated to people deemed as heroes during the Martial Law period and People Power Revolution.</string>
    <string name="zoo">Wildlife Mini Zoo</string>
    <string name="desc_zoo">Wildlife Rescue Center is like a mini zoo, If you want to gauge whether your little one is ready for his first ever zoo visit. </string>
    <string name="rita">Sta. Rita de Casia Parish</string>
    <string name="desc_ritaa">The church frequent for Sunday mass because it is private subdivision. The service is solemn and the choir singers are great.</string>
    <string name="pagasa">PAGASA Planetarium</string>
    <string name="desc_pagasa">It provides a perfect setting for all sorts of econmic educational tours whose most significant task would be present the numerous fascinating and amazing facts to everyone.</string>
    <string name="cubaoexpo">Cubao expo</string>
    <string name="desc_cubaoexpo">When it comes to all things underground, Cubao Expo is the deal. It’s the hub for all things hip and cool, from cheap eats to quirky art, from novelty items to indie music.</string>
    <string name="p5">Package 5</string>
    <string name="p5_desc">TARA offers package 5, which consists of different tourist attractions. From nature wonders to interesting historic sites, museums and once-in-a-lifetime experiences. Check out the following tourist attractions in Quezon City, Philippines.</string>
    <string name="sining">Sining Kamalig</string>
    <string name="desc_sining">Sining Kamalig is a gallery of contemporary art. Drop by to enjoy the beautiful and interesting changing exhibition of Filipino artists.</string>
    <string name="fernwood">Fernwood Gardens</string>
    <string name="desc_fernwood">The best garden wedding venue in the Philippines today. The most popular wedding events venue here in Metro Manila.</string>
    <string name="armed">Armed Forces Museum</string>
    <string name="desc_armed">The museum provides an overview of the Philippine army. You will be able to see arms and weapons and get and idea of the history of the AFP.</string>
    <string name="mystery">Mystery Manila</string>
    <string name="desc_mystery">Mystery Manila is the first live role playing game in the Philippines. It is an activity that allows people to try something new and challenging.</string>
    <string name="monasterio">Monasterio de Santa Clara</string>
    <string name="desc_monasterio">A place that is very peaceful. You can pray and praise God. A place where you can talk to God and solemnly worship.</string>
    <string name="burnham">Burnham Park</string>
    <string name="desc_burnham">The park was a central feature of Baguio when the city was first planned and developed as a retreat for the US military, and remains today as a beloved landmark.</string>
    <string name="bgcathedral">Baguio Cathedral</string>
    <string name="desc_bgcathedral">This beautiful structure has twin spires and is one of the most photographed buildings in the city.</string>
</resources>